test/corpus/addressing.txt
=================================
bracketed addressing & arithmetic
=================================

mov &[@FROG], &2020
mov &[@FROG + $02], &2022
; nested parens / ops
mov &[ ( @FROG ) + ( $0004 * $42 ) ], &3030

---
(source_file
  (newline)
    (instruction
      (mnemonic)
      (operands
        (bracket_expr
          (symbol_ref
            (identifier)))
        (address)))
    (newline)
    (instruction
      (mnemonic)
      (operands
        (bracket_expr
          (symbol_ref
            (identifier))
          (operator)
          (hex_number))
        (address)))
    (newline)
    (comment)
    (newline)
    (instruction
      (mnemonic)
      (operands
        (bracket_expr
          (paren_expr
            (symbol_ref
              (identifier)))
          (operator)
          (paren_expr
            (hex_number)
            (operator)
            (hex_number)))
        (address)))
    (newline))

=================================
indexed addressing without `&`
=================================

mov8 [@GREETING + r3], r1
mov [r1 + $04], r2

---
(source_file
  (newline)
    (instruction
      (mnemonic)
      (operands
        (bracket_expr
          (symbol_ref (identifier))
          (operator)
          (register))
        (register)))
    (newline)
    (instruction
      (mnemonic)
      (operands
        (bracket_expr
          (register)
          (operator)
          (hex_number))
        (register)))
    (newline))
