test/corpus/pointers_and_vars.txt
====================================
symbol-ref operands
====================================

mov @FROG, r1
mov r2, @FROG

---
(source_file
    (newline)
    (instruction
      (mnemonic)
      (operands
        (symbol_ref
          (identifier))
        (register)))
    (newline)
    (instruction
      (mnemonic)
      (operands
        (register)
        (symbol_ref
          (identifier))))
    (newline))
